--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,12 +1,10 @@
 {
-  "license": "",
-  "devDependencies": {
-    "@ohos/hypium": "1.0.6"
+  "modelVersion": "5.0.2",
+  "description": "Please describe the basic information.",
+  "dependencies": {
   },
-  "author": "",
-  "name": "MyList",
-  "description": "MyList is application to list the items in case forgetting to buy or to take",
-  "main": "",
-  "version": "1.0.0",
-  "dependencies": {}
+  "devDependencies": {
+    "@ohos/hypium": "1.0.21",
+    "@ohos/hamock": "1.0.0"
+  }
 }
